src/test/ui/resolve/issue-106068.stderr
error[E0433]: failed to resolve: unresolved import
  --> $DIR/issue-106068.rs:8:12
   |
LL |     let _: bar::Baz = unimplemented!();
   |            ^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `foo::bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
